--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 body {
+  font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -165,6 +167,23 @@ button:hover {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.custom-bg {
+  background-color: rgba(255, 255, 255, 0.08) !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: white;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px rgba(255, 255, 255, 0.08) !important; /* Custom color */
+}
+input {
+  color: white;
 }
 
 @keyframes spiral-border {
